force-app/main/default/objects/SLA_Configuration__mdt/fields/Applies_To_Role__c.field-meta.xml
<CustomField>
    <fullName>Applies_To_Role__c</fullName>
    <label>Applies To Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Legal</fullName><default>false</default><label>Legal</label></value>
            <value><fullName>Signatory</fullName><default>false</default><label>Signatory</label></value>
            <value><fullName>Staff Liaison</fullName><default>false</default><label>Staff Liaison</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>