force-app/main/default/objects/SLA_Configuration__mdt/fields/Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Business_Days__c</fullName>
    <label>Business Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>