force-app/main/default/objects/SLA_Configuration__mdt/fields/SLA_Name__c.field-meta.xml
<CustomField>
    <fullName>SLA_Name__c</fullName>
    <label>SLA Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>